--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/autobahn-dashboard/"
             },
             "development": {
               "buildOptimizer": false,
