--- a/angular.json
+++ b/angular.json
@@ -52,8 +52,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all",
-              "baseHref": "/autobahn-dashboard/"
+              "outputHashing": "all"
             },
             "development": {
               "buildOptimizer": false,
